date period complete

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 	<link
 	  rel="stylesheet"
-	  href="%PUBLIC_URL%/themes/scheduler.stockholm.css?449264"
+	  href="%PUBLIC_URL%/scheduler.stockholm.css?449264"
 	  id="bryntum-theme"
 	/>
 	<!--
@@ -28,7 +28,7 @@
 	  work correctly both with client-side routing and a non-root public URL.
 	  Learn how to configure a non-root public URL by running `npm run build`.
 	-->
-	<title>Bryntum Scheduler - React + TypeScript basic demo</title>
+	<title>Roadplanner</title>
 </head>
 
 <body>
